# montclair-golf-club

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  TODO.md  appearance.md  main.cpp  sampling.md
demo/: course_demo.cpp  fairway_test.cpp  gaussian_test.cpp  sampler_write_demo.cpp  seed_demo.cpp  terrain_convert_demo.cpp
include/: math_util.hpp
include/course/: CourseWriter.hpp  color_schema.hpp  course_schema.hpp  terrain_data.hpp  terrain_flags.hpp  terrain_type.hpp
include/course/feature/: FeatureSpec.hpp  SamplerBuilder.hpp  TransformSampler.hpp  WorldFeature.hpp  WorldFeatureBuilder.hpp  WorldFeatureInstancer.hpp  WorldFeatureOverlapTester.hpp  WorldFeaturePositioner.hpp  WorldFeatureSampler.hpp
include/course/feature/generic/: BlankWorldFeature.hpp
include/course/feature/height/: UnderlyingSamplerHeight.hpp
include/course/feature/pre/: ClubhouseBuilder.hpp  ClubhousePositioner.hpp
include/course/generator/: BruteForceCourseGenerator.hpp  ICourseGenerator.hpp
include/course/generator/impl/: GetDistanceToCircle.hpp  PositionTracker.hpp  seed_tracker_impl.hpp
include/course/path/: BezierCurve.hpp  CompoundCurve.hpp  CoursePath.hpp  CoursePathToCurve.hpp  CoursePathToSpline.hpp  ParameterizedCurve.hpp  Rect.hpp  fairway_point.hpp
include/course/sampler/: ArithmeticSampler.hpp  ConstSampler.hpp  GaussianMetaballSampler.hpp  ISampler.hpp  InterpolatingImageSampler.hpp  MaxFloatSampler.hpp  MetaballSampler.hpp  SimplexNoiseSampler.hpp  ThresholdSampler.hpp  TreeFillSampler.hpp  TurbulentDisplaceSampler.hpp  ZeroSampler.hpp
include/course/sampler/fairway/: SimpleFairwaySampler.hpp  TeeSampler.hpp
include/course/sampler/gaussian/: GaussianConfig.hpp  GaussianFairwaySampler.hpp  GaussianSandSampler.hpp
include/course/sampler/grass/: SimpleGrassSampler.hpp  TeeSampler.hpp
include/course/sampler/impl/: GaussianMetaball.hpp  Metaball.hpp
include/course/sampler/terrain/: SimpleCourseTerrainSampler.hpp
include/debug/draw/: DebugDraw.hpp  GradientDraw.hpp  SeedCreatorDraw.hpp  SeedPathDraw.hpp
include/debug/draw/impl/: DrawCanvas.hpp  DrawCanvasImpl.hpp
include/image/: ColorUtils.hpp  GenericImage.hpp  ImageWriter.hpp  TerrainImageConverter.hpp  TerrainToColorMap.hpp  image_dims.hpp  rgba_color.hpp
include/image/filter/: BlurImage.hpp  GaussianBlur.hpp
include/mgc/: CourseGen.hpp  CourseGen_Multi.hpp  SplatIndices.hpp
include/mgc/impl/: GrassFillWrap.hpp  SeedHeightWrap.hpp  SeedSplatWrap.hpp  TreeFillWrap.hpp
include/mgc/info/: HoleInfoFetcher.hpp
include/noise/: TurbulentDisplace.hpp  simplex_noise.hpp
include/path/: CourseBundle.hpp  CourseBundleBuilder.hpp
include/sdf/: BaseSDFBuilder.hpp  BasicTracer.hpp  Bundle.hpp  CPPBundle.hpp  CPPCapsule.hpp  CPPSmoother.hpp  InverseSDF.hpp  RectSDF.hpp  SDFBuilderType.hpp  Smoother.hpp
include/sdf/type/: BaseFairwayBuilder.hpp  SDFBuilder.hpp
include/sdf/type/fairway/: BaseFairwayBuilder.hpp  BaseFairwaySDF.hpp  TeeboxSDF.hpp
include/sdf/type/green/: BaseGreenBuilder.hpp
include/sdf/type/rough/: BaseRoughBuilder.hpp  BaseRoughSDF.hpp
include/sdf/type/sand/: BaseSandBuilder.hpp  BaseSandSDF.hpp  SandPitTracer.hpp
include/seed/: ChunkConfig.hpp  GrowConfig.hpp  SeedBasedHoleCreator.hpp  SeedGrower.hpp  SeedPositioner.hpp
include/seed/direct/: CurlNoiseDirector.hpp  DirectorBase.hpp  DirectorInfo.hpp  GradNormalDirector.hpp
include/seed/direct/impl/: SimplexHeightFunc.hpp
include/seed/hole/: ConversionResult.hpp  HoleBox.hpp  HoleChunkBox.hpp  HoleChunkConverter.hpp  HoleChunkManager.hpp  HoleGenerator.hpp  SDFHoleBox.hpp
include/seed/hole/impl/: SDFGrow.hpp  SDFThresholdSampler.hpp  SeedChunkFactory.hpp  SimpleHoleGenerator.hpp  SimplePathParser.hpp  SimpleSDFHoleBuilder.hpp  chunk_hash.hpp
include/seed/path/: SeedPath.hpp  SeedPathBuilder.hpp
include/seed/path/node/: PathNode.hpp  (+1 more)
include/terrain/: CourseSmoother.hpp  CourseStitcher.hpp  HillGenerator.hpp  PostGenHeightmap.hpp  splatnotes.md
include/terrain/grass/: GrassFillSampler.hpp
include/terrain/impl/: CourseSubSampler.hpp
include/terrain/object/: OccludingSampler.hpp
include/terrain/tree/: TreeFillSampler.hpp
include/traits/: Interpolatable.hpp  mgc_sampler.hpp  seed_tracker_spec.hpp
include/type/: sampler_type.hpp
include/util/: AABB.hpp  GC_AABB.hpp  Gaussian.hpp  LineUtil.hpp  SamplerTools.hpp
include/world/: WindHandler.hpp
include/world/wind/: BasicWindHandler.hpp  PlaceholderWindHandler.hpp  SimpleWindNoise.hpp
src/course/: CourseWriter.cpp  course_schema.cpp  terrain_data.cpp
src/course/feature/: WorldFeatureOverlapTester.cpp  WorldFeatureSampler.cpp
src/course/generator/: BruteForceCourseGenerator.cpp
src/course/path/: BezierCurve.cpp  CompoundCurve.cpp  CoursePath.cpp  CoursePathToCurve.cpp  fairway_point.cpp
src/course/sampler/: GaussianMetaballSampler.cpp  MaxFloatSampler.cpp  MetaballSampler.cpp  SimplexNoiseSampler.cpp
src/image/: ImageWriter.cpp  TerrainImageConverter.cpp  TerrainToColorMap.cpp  rgba_color.cpp
src/image/filter/: GaussianBlur.cpp
src/mgc/: CourseGen.cpp
src/noise/: TurbulentDisplace.cpp
src/path/: CourseBundleBuilder.cpp
src/sdf/: Bundle.cpp  CPPBundle.cpp  CPPCapsule.cpp  RectSDF.cpp  Smoother.cpp
src/sdf/type/: SDFBuilder.cpp
src/seed/: SeedGrower.cpp  SeedPositioner.cpp
src/seed/hole/: HoleChunkBox.cpp  HoleChunkConverter.cpp  HoleChunkManager.cpp
src/seed/path/: SeedPath.cpp  SeedPathBuilder.cpp
src/seed/store/: CourseRepo.cpp
src/support/: prepare_stb.cpp
src/terrain/: HillGenerator.cpp
src/util/: AABB.cpp  Gaussian.cpp  LineUtil.cpp
terrainnotes/: fairway.md  overlappingfeatures.md  sand.md  terrain.md  water.md
test/: BezierCurveTest.cpp  CompoundCurveTest.cpp  CourseSchemaTest.cpp  GenericImageTest.cpp  GetDistanceToCircleTest.cpp  HoleBoxTest.cpp  HoleChunkBoxTest.cpp  HoleChunkManagerTest.cpp  InterpolatingImageSamplerTest.cpp  MetaballSamplerTest.cpp  RGBAColorTest.cpp  SCPCTest.cpp  SeedPathBuilderTest.cpp  SeedPathDrawTest.cpp  SeedPathIteratorTest.cpp  SimplexNoiseSamplerTest.cpp  TerrainDataTest.cpp
(+43 files in other folders)
